fixed gap styles

--- a/src/assets/CoustomStyle/style.css
+++ b/src/assets/CoustomStyle/style.css
@@ -5761,6 +5761,10 @@ span.ant-upload-list-item-name {
 }
 
 /* Application pipline S*/
+/* custom gap */
+.gap-4px {
+  gap: 4px;
+}
 /* ant date range */
 .ant-picker {
   min-height: 38px;
